# word_counter

./: .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.py  pyproject.toml  scrapping.py
src/: lib.rs
src/.ipynb_checkpoints/: lib-checkpoint.rs
