[package]
name = "word_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "word_counter"
crate-type = ["cdylib"]

[dependencies]
regex = "1.5"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
